fix spacing in simulation 2

--- a/src/css/custom_slide_styles.styl
+++ b/src/css/custom_slide_styles.styl
@@ -70,6 +70,9 @@
   color $purple
   font-family 'Chivo', sans-serif
 
+.precinct-container p
+  line-height 0.1rem
+
 
 /* SIMULATION 3 STYLES */
 .slide-text-content
